Archive2/55/ebe210347a985f/output
main.cpp:4:5: error: use of undeclared identifier 'std'
    std::vector<T> vec;
    ^
main.cpp:4:16: error: expected member name or ';' after declaration specifiers
    std::vector<T> vec;
    ~~~~~~~~~~~^
main.cpp:6:5: error: use of undeclared identifier 'std'
    std::vector<T> getVector() && {
    ^
main.cpp:6:16: error: expected member name or ';' after declaration specifiers
    std::vector<T> getVector() && {
    ~~~~~~~~~~~^
main.cpp:24:16: error: use of undeclared identifier 'std'
    auto vec = std::move(foo).getVectorAndMore();
               ^
5 errors generated.
